# proofhire

./: .cursorrules  .env.example  .gitignore  .mcp.json  API_ENDPOINTS_NEEDED.md  CACHE_GENERATION_GUIDE.md  CLAUDE_PERPLEXITY_ARCHITECTURE.md  CURSOR_SETUP.md  CompanyLandingPage.tsx  ENRICHMENT_UI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_IMPLEMENTATION_SUMMARY.md  INTEGRATION_SETUP.md  INTEGRATION_SUMMARY.md  Makefile  OPENCLAW_INTEGRATION_GUIDE.md  OPENCLAW_SAAS_SECURITY_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  TESTING_GUIDE.md  UNIFIED_DASHBOARD.md  docker-compose.yml  package-lock.json  page.tsx  proofhire.code-workspace
agencity/: .env.example  .env.production.example  .gitignore  API_USAGE_EXAMPLE.md  AWS_CREDENTIALS_SETUP.md  AWS_DEPLOYMENT_GUIDE.md  CREATE_TABLES.sql  DATABASE_SETUP.md  DEMO_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.test  END_TO_END_TESTING.md  HARDCODED_SUMMARIES.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_API_GUIDE.md  LINKEDIN_PHASE1_PHASE2_IMPLEMENTATION.md  LINKEDIN_PROGRESS_SUMMARY.md  MIGRATION_TO_REST_API.md  QUICKSTART_CURATION.md  QUICK_START.md  QUICK_TEST.md  README.md  SETUP_INSTRUCTIONS.md  TESTING_GUIDE.md  Untitled-1.jsonc  check_cookies.py  conftest.py  debug_connections_page.py  debug_login_check.py  demo_phase1_phase2.py  deployment-info.txt  diagnose_session.py  extract_real_selector.py  find_card_container.py  find_connection_selectors.py  get_page_structure.py  inspect_connections_dom.py  inspect_with_session.py  (+22 more)
agencity/app/: __init__.py  auth.py  cli.py  config.py  logging_config.py  main.py  middleware.py  rate_limit.py
agencity/docs/: ARCHITECTURE.md  CURATION_SYSTEM.md  DATABASE_EXPLAINER.md  DATABASE_SETUP.md  DATA_SOURCES_AUDIT.md  GHOST_CURSOR_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  MANUAL_LOGIN_INTEGRATION.md  NETWORK_INTELLIGENCE_SYSTEM.md  NETWORK_SEARCH_SYSTEM.md  README.md
agencity/scripts/: README.md  __init__.py  apply_supabase_migration.py  audit_enrichment_providers.py  check-openclaw-updates.sh  debug_scoring.py  debug_search.py  demo_conversation.py  demo_live.py  deploy-to-ec2.sh  explore_data.sh  explore_github.sh  explore_supabase.sh  find_hero_candidates.sh  find_rohan.py  find_waterloo.py  full-deployment.sh  get_candidate_details.sh  import_confido_rest.py  import_greptile_rest.py  import_onboarding.py  link_supabase_user.py  manual_login.py  parse_schema.py  populate_curation_cache.py  setup_db.py  (+26 more)
backend/: .env.example  Dockerfile  pyproject.toml
(+1945 files in other folders)
